# ai_chat_app

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml
k8s/: ingress.yaml  namespace.yaml  ollama-deployment.yaml  ollama-init-job.yaml  ollama-service.yaml  webapp-deployment.yaml  webapp-service.yaml
scripts/: deploy.sh  setup-cluster.sh  teardown.sh
soruce/: pyvenv.cfg
source/: pyvenv.cfg
src/ai_chat/: __init__.py  app.py  chat.py  config.py
tests/: test_app.py  test_chat.py
